[gd_scene load_steps=3 format=3 uid="uid://f4f5ifsaijeb"]

[ext_resource type="Script" path="res://target_area.gd" id="1_jm4j5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fb6sy"]
radius = 200.0

[node name="TargetArea" type="Node2D"]
script = ExtResource("1_jm4j5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fb6sy")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
